--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -59,14 +59,54 @@
         </ul>
       </section>
       <section>
-        <h2></h2>
+        <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
+          <li>
+            <img src="./images/img.jpg" alt="кодинг" width="370" height="294" />
+          </li>
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="адаптація"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="дизайн"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
-      <section></section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/img-3.jpg" alt="хлопець в окулярах">
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img-4.jpg" alt="дівчина в окулярах">
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img-5.jpg" alt="хлопець посміхається">
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="хлопець в окулярах">
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
