--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
   <body>
     <header>
       <nav>
-        <a href="index.html"><span>Web</span>Studio</a>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li>
+            <a href="./index.html">Студія</a>
+          </li>
+          <li>
+            <a href="">Портфоліо</a>
+          </li>
+          <li>
+            <a href="">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -62,7 +72,12 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="кодинг" width="370" height="294" />
+            <img
+              src="./images/img-0.jpg"
+              alt="кодинг"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
             <img
@@ -86,28 +101,68 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img-3.jpg" alt="хлопець в окулярах">
+            <img
+              src="./images/img-3.jpg"
+              alt="хлопець в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-4.jpg" alt="дівчина в окулярах">
+            <img
+              src="./images/img-4.jpg"
+              alt="дівчина в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img-5.jpg" alt="хлопець посміхається">
+            <img
+              src="./images/img-5.jpg"
+              alt="хлопець посміхається"
+              width="270"
+              height="260"
+            />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-6.jpg" alt="хлопець в окулярах">
+            <img
+              src="./images/img-6.jpg"
+              alt="хлопець в окулярах"
+              width="270"
+              height="260"
+            />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/ud8NmV5yiws8x5bs8"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
